--- a/src/app/pages/academics/academic-year/academic-year-setting/academic-year-setting.component.html
+++ b/src/app/pages/academics/academic-year/academic-year-setting/academic-year-setting.component.html
@@ -30,8 +30,8 @@
   <div class="card mt-2">
     <div class="p-2 d-flex justify-content-around">
       <div class="col-lg-4">
-        <button *ngIf="v.academicYear.archived" (click)="openUnarchiveModal()" class="btn btn-danger"><span class="icon-archive"></span> Unarchive Academic Year</button>
-        <button *ngIf="!v.academicYear.archived" (click)="openArchiveModal()" class="btn btn-warning"><span class="icon-archive"></span> Archive Academic Year</button>
+        <button *ngIf="v.academicYear.archived" (click)="openUnarchiveModal()" class="btn btn-danger"><fa-icon [icon]="faArchive"></fa-icon> Unarchive Academic Year</button>
+        <button *ngIf="!v.academicYear.archived" (click)="openArchiveModal()" class="btn btn-warning"><fa-icon [icon]="faArchive"></fa-icon> Archive Academic Year</button>
       </div>
       <div class="col-lg-4">
         <button (click)="openDeleteModal()" class="btn btn-danger"><fa-icon [icon]="faTrash"></fa-icon> Delete Academic Year</button>
