--- a/src/app/pages/academics/e-learning/e-learning-courses/e-learning-course-study-material/e-learning-course-study-material.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-courses/e-learning-course-study-material/e-learning-course-study-material.component.html
@@ -36,7 +36,7 @@
         <span [style.color]='studyMaterial.file_document_info.type | fileExtension:"color"'
           [class]='studyMaterial.file_document_info.type | fileExtension:"icon"'></span>
         Download File
-        <span class="icon-download"></span>
+        <fa-icon [icon]="faDownload"></fa-icon>
       </button>
     </section>
     <fieldset class="col-lg-6">
