--- a/src/app/pages/login/user-password-reset/user-password-reset.component.html
+++ b/src/app/pages/login/user-password-reset/user-password-reset.component.html
@@ -4,7 +4,9 @@
     <div class="form-group">
       <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Reset Password'
                  placeholder='Enter Password' id='password'
-                 formControlName='resetPassword' prependIcon='icon-lock-filled' type='password'>
+                 formControlName='resetPassword' type='password'>
+        <fa-icon data-prependIcon [icon]="faKey"></fa-icon>
+
       </app-input>
     </div>
   </section>
