--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -5,10 +5,10 @@ Filter:
 <ul class="list-group list-group-flush bg-dark list-group-horizontal d-flex flex-wrap">
   <li class="list-group-item bg-dark col-lg-4">
     <a routerLink='/reports/1'>
-      <span class="icon-doc-text-inv"></span>Student Admissions Report</a>
+      <fa-icon [icon]="faFileAlt"></fa-icon> Student Admissions Report</a>
   </li>
   <li class="list-group-item bg-dark col-lg-4">
     <a routerLink='/reports/1'>
-      <span class="icon-doc-text-inv"></span>Incomplete Student Details Report</a>
+      <fa-icon [icon]="faFileAlt"></fa-icon> Incomplete Student Details Report</a>
   </li>
 </ul>
