--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -4,7 +4,7 @@
     <button (click)='closeMessage()' type="button" class="close" data-dismiss="alert" aria-label="Close">
       <fa-icon [icon]="faTimes"></fa-icon>
     </button>
-    <p class='icon-attention'><strong>{{ errorBody.status + ': ' }}{{ errorBody.title }}</strong></p>
+    <p><strong><fa-icon [icon]="faExclamationCircle"></fa-icon>{{ errorBody.status + ': ' }}{{ errorBody.title }}</strong></p>
     <p>{{ errorBody.body }}</p>
   </section>
 </section>
