--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <section class='alert alert-danger'>
   <h3 class="text-dark">404: Page Not Found</h3>
-  <span class='icon-attention'></span>The page you are looking for could not be found! If this is an error kindly
+  <fa-icon [icon]='faExclamationCircle'></fa-icon>The page you are looking for could not be found! If this is an error kindly
   contact the administrator
   <button routerLink='/dashboard' class='btn btn-outline-primary'> Home</button>
 </section>
