--- a/src/app/components/user-profile/user-select-item/user-select-item.component.html
+++ b/src/app/components/user-profile/user-select-item/user-select-item.component.html
@@ -26,7 +26,7 @@
       </span>
       <button type="button" (click)='editable = true' (mouseout)='editHovered = false' (mouseover)='editHovered = true'
               *ngIf='editMode$ | ngrxPush' [attr.aria-label]='"Edit " + label' class="icon">
-        <span [class.icon-pencil-1]='!editHovered' [class.icon-edit]="editHovered"></span>
+        <fa-icon [icon]="editHovered ? faEdit : faPencilAlt"></fa-icon>
       </button>
     </span>
   </section>
