--- a/src/app/pages/academics/academic-year/academic-year.component.html
+++ b/src/app/pages/academics/academic-year/academic-year.component.html
@@ -18,7 +18,7 @@
         <h2>{{ academicYear.name }}</h2>
         <button [routerLink]='["/academics", "academic-year", academicYear.id, "settings"]'
                 *ngIf="!academicYear.deleted"
-                class="btn btn-outline-info icon-cog">Settings
+                class="btn btn-outline-info"><fa-icon [icon]="faCog"></fa-icon> Settings
         </button>
       </section>
       <section class="card-body p-2" [class.bg-warning]="academicYear.archived"
