--- a/src/app/pages/academics/e-learning/e-learning-topic-objectives/e-learning-topic-objectives.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-topic-objectives/e-learning-topic-objectives.component.html
@@ -4,7 +4,7 @@
   <ul class="list-group mr-0">
     <li class="list-group-item bg-dark d-flex justify-content-between pr-0"
         *ngFor='let learningOutcome of learningOutcomes; let i = index'>
-      <span> <i class='icon-lightbulb'></i>
+      <span> <fa-icon [icon]="faBullseye"></fa-icon>
         {{ learningOutcome.description }}</span>
       <span *ngIf="edit">
         <button (click)="editLearningOutcome({id:i, component: editLearningOutcomeModal})"
