--- a/src/app/pages/academics/exam-bank/exam-bank-admin/admin-exam-paper-edit/admin-exam-paper-edit.component.html
+++ b/src/app/pages/academics/exam-bank/exam-bank-admin/admin-exam-paper-edit/admin-exam-paper-edit.component.html
@@ -107,7 +107,9 @@
             <div class="col-lg-8">
             <span *ngFor='let tag of tags.value; let j = index'
                   class="badge badge-secondary p-2 mr-2 mb-2">{{ tag }}<span aria-label="Delete tag" (click)='deleteTag(j)'
-                                                                             class="icon-cancel close p-0 m-0 pl-1"></span></span>
+                                                                             class="close p-0 m-0 pl-1">
+              <fa-icon [icon]="faTimesCircle"></fa-icon>
+            </span></span>
 
             </div>
           </div>
