--- a/src/app/pages/academics/study-materials/study-material/view-study-material/view-study-material.component.html
+++ b/src/app/pages/academics/study-materials/study-material/view-study-material/view-study-material.component.html
@@ -1,16 +1,10 @@
 <h1>Study Material</h1>
-<ng-container *ngIf='!isLoaded'>
-  <app-loading-bubble></app-loading-bubble>
-</ng-container>
 <section class='d-flex flex-wrap'>
-  <pdf-viewer [src]='"https://vadimdez.github.io/ng2-pdf-viewer/assets/pdf-test.pdf"'
-              [original-size]="false"
-  ></pdf-viewer>
-  <div *ngIf="isLoaded" class="col-md-12 col-lg-12 d-flex justify-content-center">
+  <div *ngIf="pdfSrc$ | ngrxPush" class="col-md-12 col-lg-12 d-flex justify-content-center">
     <button aria-label="Toggle Outline" (click)='showOutline = !showOutline' class="btn btn-secondary btn-sm mr-2 align-self-start">
-      <span class="icon-align-justify"></span></button>
+      <fa-icon [icon]="faAlignJustify"></fa-icon></button>
     <button aria-label="Zoom in" (click)='zoomIn()' class="btn btn-secondary btn-sm mr-2">
-      <span [icon]="faMinusCircle"></span></button>
+      <fa-icon [icon]="faMinusCircle"></fa-icon></button>
     <button aria-label="Zoom out" (click)='zoomOut()' class="btn btn-secondary btn-sm mr-2">
       <fa-icon [icon]="faPlusCircle"></fa-icon>
     </button>
@@ -20,8 +14,11 @@
       {{ totalPages }}</span>
     <button class="btn btn-secondary btn-sm" type="button" (click)="nextPage()"
       [disabled]="page === totalPages">Next</button>
-    <button (click)='goFullScreen()' aria-label="Go fullscreen" class="btn btn-sm btn-secondary ml-2"><span class="icon-resize-full-1"></span></button>
+    <button (click)='goFullScreen()' aria-label="Go fullscreen" class="btn btn-sm btn-secondary ml-2"><fa-icon [icon]="faExpandAlt"></fa-icon></button>
   </div>
+  <ng-template #loading>
+    <app-loading-bubble></app-loading-bubble>
+  </ng-template>
   <section class="col-lg-3" *ngIf='!showOutline'>
     <app-add-study-materials-title [items]='outline'></app-add-study-materials-title>
   </section>
@@ -30,7 +27,8 @@
     [class.col-lg-12]='showOutline'
     class="mt-2"
     id='docSection'>
+
     <pdf-viewer [zoom]='zoom' [page]="page" (after-load-complete)="afterLoadComplete($event)" [show-all]='false'
-      [fit-to-page]="true" [src]="pdfSrc" [render-text]="true" style="display: block;"></pdf-viewer>
+      [fit-to-page]="true" [src]="pdfSrc" [render-text]="true"></pdf-viewer>
   </section>
 </section>
