--- a/src/app/pages/admissions/staff-admissions/support-staff-admission/support-staff-admission.component.html
+++ b/src/app/pages/admissions/staff-admissions/support-staff-admission/support-staff-admission.component.html
@@ -17,8 +17,8 @@
     </section>
     <section class="col-lg-4 col-md-5">
 
-      <button class="btn btn-primary mt-2 mt-lg-3" [disabled]='staffTypeFrom.invalid'>GO <span
-          class="icon-paper-plane-empty"></span></button>
+      <button class="btn btn-primary mt-2 mt-lg-3" [disabled]='staffTypeFrom.invalid'>GO
+        <fa-icon [icon]="faPaperPlane"></fa-icon></button>
     </section>
 
   </section>
