--- a/src/app/pages/procurements/create-procurement-tender-bid/create-procurement-tender-bid.component.html
+++ b/src/app/pages/procurements/create-procurement-tender-bid/create-procurement-tender-bid.component.html
@@ -22,10 +22,10 @@
     </section>
     <section  class="col-lg-12" *ngIf='(errorBody$ | ngrxPush) as errorBody'>
       <section *ngIf='errorBody.show' class="alert alert-danger alert-dismissible fade show">
-        <p class='icon-attention'><strong>{{ errorBody.status + ': ' }}{{ errorBody.title }}</strong></p>
+        <p> <fa-icon [icon]="faExclamationCircle"></fa-icon> <strong>{{ errorBody.status + ': ' }}{{ errorBody.title }}</strong></p>
         <p>{{ errorBody.body }}</p>
         <button (click)='closeMessage()' type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span class='icon-cancel-circled close'></span>
+          <fa-icon [icon]="faTimes" class='close'></fa-icon>
         </button>
       </section>
     </section>
