--- a/src/app/pages/procurements/view-procurement-tenders-awarded/view-procurement-tenders-awarded.component.html
+++ b/src/app/pages/procurements/view-procurement-tenders-awarded/view-procurement-tenders-awarded.component.html
@@ -27,7 +27,8 @@
           [disabled]='!(procurementTender["fulfilled"] === undefined || procurementTender["fulfilled"] === null)'
           (click)='openModalWithComponent(procurementTender.id, false)'
           aria-label='Mark as NotFulfilled'
-          class='icon-cancel btn btn-sm btn-danger'>
+          class='btn btn-sm btn-danger'>
+          <fa-icon [icon]="faTimes"></fa-icon>
         </button>
         <button
           [disabled]='!(procurementTender["fulfilled"] === undefined || procurementTender["fulfilled"] === null)'
