--- a/src/app/pages/procurements/view-procurements-approved-requests/view-procurements-approved-requests.component.html
+++ b/src/app/pages/procurements/view-procurements-approved-requests/view-procurements-approved-requests.component.html
@@ -9,8 +9,8 @@
       <section accordion-heading class="active d-flex justify-content-between">
         <h2>{{ procurementItem.name }}</h2>
         <section>
-          <button class="btn btn-primary btn-sm"><span [class.icon-down-dir]='!isOpen[i]'
-              [class.icon-up-dir]='isOpen[i]'></span>View</button>
+          <button class="btn btn-primary btn-sm">
+            <fa-icon [icon]="!isOpen[i] ? faChevronDown : faChevronUp"></fa-icon> View</button>
         </section>
       </section>
 
