--- a/src/app/pages/roles-and-permissions/roles-permissions/roles-permissions.component.html
+++ b/src/app/pages/roles-and-permissions/roles-permissions/roles-permissions.component.html
@@ -17,7 +17,7 @@
     <input aria-label="filter" placeholder="Filter Permissions" [(ngModel)]='filter' class="form-control" type="text" name="" id="">
     <ul class="d-flex flex-wrap pl-0">
       <li class="col-lg-4 col-md-6 col-sm-12 list-group-item bg-dark" *ngFor='let permission of getFilteredPermissionsWithRoleId(role)'>
-        <span class="icon-thumbs-up text-success"></span> {{ permission.name | titlecase }}
+        <fa-icon [icon]="faThumbsUp" class="text-success"></fa-icon> {{ permission.name | titlecase }}
       </li>
     </ul>
   </fieldset>
