Added Online Test page

--- a/src/app/pages/academics/exam-bank/exam-bank-admin/question-view/question-view.component.html
+++ b/src/app/pages/academics/exam-bank/exam-bank-admin/question-view/question-view.component.html
@@ -11,8 +11,7 @@
       </button>
       <button (click)='activeQuestionNext()' [disabled]='activeQuestion === (questionsLength - 1)'
               type="button" class="btn btn-sm btn-secondary ml-2">
-        <fa-icon [icon]="faAngleDoubleRight"></fa-icon>
-        Next
+        Next <fa-icon [icon]="faAngleDoubleRight"></fa-icon>
 
       </button>
 
