--- a/src/app/pages/students/view-student/view-student.component.html
+++ b/src/app/pages/students/view-student/view-student.component.html
@@ -5,7 +5,7 @@
   title='Student'
   [profile]='studentProfile'
   [linkBase]='["/students"]'
-  [links]='["info", "guardians", "academics"]'
+  [links]='["info", "guardians", "academics", "library"]'
 ></app-user-profile>
 </ng-container>
 <ng-template #loading>
