Profile loading when error fixed [Fixes #177572825]

--- a/src/app/pages/students/create-student-guardian/create-student-guardian.component.html
+++ b/src/app/pages/students/create-student-guardian/create-student-guardian.component.html
@@ -82,7 +82,7 @@
                 <section class='col-lg-4 col-md-4 col-sm-6 col-xs-12'>
                   <app-input [triggerValidation]="triggerValidationAction$ | ngrxPush" id="{{ 'relation' + i }}"
                              type="text" label="Relation"
-                             placeholder="Relationship To Student" formControlName="relation"></app-input>
+                             placeholder="Relationship To Student" formControlName="relationship"></app-input>
                 </section>
                 <section class='col-lg-4 col-md-4 col-sm-6 col-xs-12'>
                   <app-select label='Gender' id="{{ 'gender' + i}}" formControlName="gender" placeholder="Gender"
