Library profile on teacher profile page [Finishes #178216039]

--- a/src/app/pages/teachers/view-teacher/view-teacher.component.html
+++ b/src/app/pages/teachers/view-teacher/view-teacher.component.html
@@ -5,7 +5,7 @@
     title='Teacher'
     [profile]='teacherProfile'
     [linkBase]='["/teachers"]'
-    [links]='["info", "subjects"]'
+    [links]='["info", "subjects", "library"]'
   ></app-user-profile>
   <ng-template #errorBlock>
     <h1>Teacher Profile</h1>
