--- a/src/app/pages/academics/curriculum/create-class-level-category/create-class-level-category.component.html
+++ b/src/app/pages/academics/curriculum/create-class-level-category/create-class-level-category.component.html
@@ -1,4 +1,4 @@
-<h1> {{ (editFormAction$ | ngrxPush) ? 'Update': 'Create'}} Class Level Category</h1>
+<h1> {{ (editFormAction$ | ngrxPush) ? 'Update' : 'Create'}} Class Level Category</h1>
 <form class="card p-2" [formGroup]="classLevelCategoryForm" (submit)="submit()">
   <fieldset>
     <legend>General Details</legend>
@@ -15,13 +15,17 @@
       </section>
       <section class="col-lg-12 col-md-12 col-sm-12">
         <section>
-          <label for="description">Category Description</label>
-            <div [hidden]='(editorInitializedAction$ | ngrxPush) === false'>
-              <editor (onInit)='initializeEditor()' id='description' formControlName='description' [init]="tinyMCEConfig"></editor>
-            </div>
-            <div>
-               <app-loading-bubble *ngIf='(editorInitializedAction$ | ngrxPush) === false'></app-loading-bubble>
-            </div>
+          <label
+            [attr.for]="((editFormAction$ | ngrxPush) ? 'Update' : 'Create') + '-class-level-category-form-description'">Category
+            Description</label>
+          <div [hidden]='(editorInitializedAction$ | ngrxPush) === false'>
+            <editor (onInit)='initializeEditor()' [id]="((editFormAction$ | ngrxPush) ? 'Update' : 'Create') + '-class-level-category-form-description'"
+                    formControlName='description'
+                    [init]="tinyMCEConfig"></editor>
+          </div>
+          <div>
+            <app-loading-bubble *ngIf='(editorInitializedAction$ | ngrxPush) === false'></app-loading-bubble>
+          </div>
 
         </section>
       </section>
@@ -30,9 +34,11 @@
   </fieldset>
   <section class='d-flex justify-content-end mt-2'>
 
-    <button [disabled]='!classLevelCategoryForm.valid || (submitInProgressAction$ | ngrxPush)' class='btn btn-success' type='submit'>
-      {{ (editFormAction$ | ngrxPush) ? 'Update': 'Create'}}
-      <fa-icon *ngIf='classLevelCategoryForm.valid && (submitInProgressAction$ | ngrxPush) === false' [icon]='faSave'></fa-icon>
+    <button [disabled]='!classLevelCategoryForm.valid || (submitInProgressAction$ | ngrxPush)' class='btn btn-success'
+            type='submit'>
+      {{ (editFormAction$ | ngrxPush) ? 'Update' : 'Create'}}
+      <fa-icon *ngIf='classLevelCategoryForm.valid && (submitInProgressAction$ | ngrxPush) === false'
+               [icon]='faSave'></fa-icon>
       <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" [spin]="true"></fa-icon>
     </button>
   </section>
