--- a/src/app/pages/academics/curriculum/create-unit-categories/create-unit-categories.component.html
+++ b/src/app/pages/academics/curriculum/create-unit-categories/create-unit-categories.component.html
@@ -1,4 +1,4 @@
-<h1>{{ (editFormAction$ | ngrxPush) ? 'Update': 'Create'}} Unit/Subject Category</h1>
+<h1>{{ (editFormAction$ | ngrxPush) ? 'Update' : 'Create'}} Unit/Subject Category</h1>
 <section class="card p-2">
   <form (submit)="submit()" [formGroup]="newUnitCategoryForm">
     <fieldset>
@@ -6,7 +6,7 @@
       <section class="d-flex flex-wrap">
         <section class="col-lg-5 col-md-6 col-sm-12">
           <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Name' id="name" placeholder="Name"
-            formControlName="name">
+                     formControlName="name">
           </app-input>
         </section>
         <section class="col-lg-5 col-md-6 col-sm-6 col-xs-12 mt-sm-5 mt-lg-1">
@@ -17,11 +17,12 @@
         </section>
         <section class="col-lg-12 col-md-12 col-sm-12">
           <section>
-            <label for="description">Subject Description</label>
+            <label [attr.for]="((editFormAction$ | ngrxPush) ? 'update': 'create') + '-unit-form-description'">Subject
+              Description</label>
 
             <div [hidden]='(editorInitializedAction$ | ngrxPush) === false'>
-              <editor (onInit)='initializeEditor()' id='description' formControlName='description'
-                [init]="tinyMCEConfig"></editor>
+              <editor (onInit)='initializeEditor()' id='create-unit-form-description' formControlName='description'
+                      [init]="tinyMCEConfig"></editor>
             </div>
             <div>
               <app-loading-bubble *ngIf='(editorInitializedAction$ | ngrxPush) === false'></app-loading-bubble>
@@ -33,19 +34,22 @@
     <fieldset *ngIf='(editFormAction$ | ngrxPush) === false'>
       <legend>Subject Details</legend>
       <button (click)="addSubject()" type="button" class="btn btn-sm btn-primary">
-        <fa-icon [icon]="faPlusCircle"></fa-icon> Add
+        <fa-icon [icon]="faPlusCircle"></fa-icon>
+        Add
       </button>
       <section class="d-flex flex-wrap" formArrayName='units'>
         <section style="border: inset 3px rgba(53, 53, 53, 0.404);" class="col-sm-12"
-          *ngFor="let unit of units.controls; let i = index">
+                 *ngFor="let unit of units.controls; let i = index">
           <span *ngIf="!unit.valid" class="text-warning float-right">*section is incomplete</span>
           <span *ngIf="unit.valid" class="text-success float-right">*section is complete</span>
           <app-create-unit [idIndex]='i' [hideSubmit]='true' [hasCategories]="false" [inputValue]="units"
-            (valueChange)="updateForm($event, i)" [submitButton]="false">
+                           (valueChange)="updateForm($event, i)" [submitButton]="false">
           </app-create-unit>
           <section class="float-left">
             <button (click)="removeSubject(i)" type="button" class="btn btn-danger btn-sm">
-              <fa-icon [icon]="faTrash"></fa-icon> delete</button>
+              <fa-icon [icon]="faTrash"></fa-icon>
+              delete
+            </button>
           </section>
         </section>
 
@@ -55,8 +59,9 @@
 
     <section class="mt-2">
       <app-validate-submit-buttons [isSubmitting]='submitInProgressAction$ | ngrxPush'
-        (validationButtonClicked)='triggerValidationSubject$.next(true)' [formItem]='newUnitCategoryForm'>
-        <span>{{ (editFormAction$ | ngrxPush) ? 'Update': 'Create' }}</span>
+                                   (validationButtonClicked)='triggerValidationSubject$.next(true)'
+                                   [formItem]='newUnitCategoryForm'>
+        <span>{{ (editFormAction$ | ngrxPush) ? 'Update' : 'Create' }}</span>
       </app-validate-submit-buttons>
 
     </section>
